feat：adapter yygame close

--- a/Android/scenes/play_zone/src/main/AndroidManifest.xml
+++ b/Android/scenes/play_zone/src/main/AndroidManifest.xml
@@ -23,5 +23,8 @@
             android:name="io.agora.scene.playzone.hall.PlayRoomListActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
+
+        <activity android:name="io.agora.scene.playzone.live.PlayWebViewActivity"
+            android:exported="false"/>
     </application>
 </manifest>
