feat: adapter local rtm sdk

--- a/Android/RTMSyncManager/build.gradle
+++ b/Android/RTMSyncManager/build.gradle
@@ -31,6 +31,7 @@ android {
 }
 
 dependencies {
+    implementation project(":common:base")
     implementation rootProject.ext.deps.gson
     implementation rootProject.ext.deps.annotation
     implementation rootProject.ext.deps.retrofit2
@@ -41,6 +42,5 @@ dependencies {
     implementation rootProject.ext.deps.retrofit2
     implementation rootProject.ext.deps.retrofit2_cov
 
-    implementation rootProject.ext.deps.rtm
     implementation rootProject.ext.deps.rtc
 }
