--- a/Android/config.gradle
+++ b/Android/config.gradle
@@ -38,6 +38,7 @@ ext {
 
             lifecycle         : 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1',
             lifecycle_runtime : 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1',
+            lifecycle_extensions : 'androidx.lifecycle:lifecycle-extensions:2.2.0',
             fragment_ktx      : 'androidx.navigation:navigation-fragment-ktx:2.4.1',
             ui_ktx            : 'androidx.navigation:navigation-ui-ktx:2.4.1',
             palette_ktx       : 'androidx.palette:palette-ktx:1.0.0',
