--- a/Android/gradle.properties
+++ b/Android/gradle.properties
@@ -8,6 +8,8 @@ android.enableJetifier=true
 APP_VERSION_CODE=5
 # application version name
 APP_VERSION_NAME=5.0.0
+# use local sdk
+USE_LOCAL_SDK=false
 
 #----------- Server Host Config --------------
 SERVER_HOST=https://gateway-fulldemo.shengwang.cn/
