--- a/Android/common/base/build.gradle
+++ b/Android/common/base/build.gradle
@@ -8,6 +8,8 @@ if (project.property("AGORA_APP_ID").toString().isEmpty()) {
     throw new GradleException("请在 gradle.properties 中配置完整的 Agora ID 和 Certificate")
 }
 
+final def USE_LOCAL_SDK = properties.getProperty("USE_LOCAL_SDK").toBoolean()
+def localsdkPath = "agora-sdk"
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
 
@@ -52,6 +54,14 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    if (USE_LOCAL_SDK) {
+        sourceSets {
+            main {
+                jniLibs.srcDirs += "${localsdkPath}"
+            }
+        }
+    }
 }
 
 dependencies {
@@ -82,7 +92,11 @@ dependencies {
     implementation rootProject.ext.deps.coroutines_android
 
 
-    api rootProject.ext.deps.rtc
+    if (USE_LOCAL_SDK) {
+        api fileTree(dir: "${localsdkPath}", include: ['*.jar'])
+    } else {
+        api rootProject.ext.deps.rtc
+    }
     api rootProject.ext.deps.ok2curl
 
     api rootProject.ext.deps.protobuf_java
