--- a/Android/common/base/build.gradle
+++ b/Android/common/base/build.gradle
@@ -8,6 +8,7 @@ if (project.property("AGORA_APP_ID").toString().isEmpty()) {
     throw new GradleException("请在 gradle.properties 中配置完整的 Agora ID 和 Certificate")
 }
 
+def properties = new Properties()
 final def USE_LOCAL_SDK = properties.getProperty("USE_LOCAL_SDK").toBoolean()
 def localsdkPath = "agora-sdk"
 android {
