--- a/Android/settings.gradle
+++ b/Android/settings.gradle
@@ -31,6 +31,12 @@ include ':common:scenario-api:lib_videoloaderapi'
 include ':common:scenario-api:lib_callapi'
 include ':common:scenario-api:lib_audioscenarioapi'
 
+include ':common:scenario-api:lib_beautyapi'
+include ':common:scenario-api:lib_beautyapi:aars:beauty_sensetime:SenseArSourceManager'
+include ':common:scenario-api:lib_beautyapi:aars:beauty_sensetime:STMobileJNI'
+include ':common:scenario-api:lib_beautyapi:aars:beauty_sensetime:HardwareBuffer'
+include ':common:scenario-api:lib_beautyapi:aars:beauty_bytedance:EffectAAR'
+
 include ':RTMSyncManager'
 
 /*
@@ -69,10 +75,6 @@ include ':scenes:voice_spatial:common'
  * 秀场直播
  */
 include ':scenes:show'
-include ':scenes:show:aars:beauty_sensetime:SenseArSourceManager'
-include ':scenes:show:aars:beauty_sensetime:STMobileJNI'
-include ':scenes:show:aars:beauty_sensetime:HardwareBuffer'
-include ':scenes:show:aars:beauty_bytedance:EffectAAR'
 
 /*
  * 1V1私密房
