--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -36,7 +36,7 @@ def all_pods
   pod 'AgoraSyncManager', '~> 2.1.6'
 #  pod 'AgoraRtcEngine_Special_iOS', :path => 'AgoraRtcEngine_iOS.podspec'
   pod 'AgoraRtcEngine_Special_iOS', '4.3.1.133'
-#  pod 'AgoraRtcEngine_Special_iOS', '4.1.1.29'
+#  pod 'AgoraRtm', '2.2.1'
   pod 'AgoraRtm', :path => 'AgoraRtm.podspec'
 
   pod 'AudioScenarioApi', :path => 'AgoraEntScenarios/Common/API/AudioScenarioApi'
@@ -84,10 +84,6 @@ def all_pods
   pod 'Bugly','2.5.93'
   
   pod 'HXPhotoPicker/Lite', '4.1.7'
-  
-  
-  #need to remove
-#  pod 'MJRefresh'
 end
 
 target 'AgoraEntScenarios' do
