FEAT: update voice service

--- a/Android/scenes/voice/build.gradle
+++ b/Android/scenes/voice/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     implementation project(":common:base")
     implementation project(':common:ui-widget')
     implementation project(':scenes:voice:common')
-
+    implementation project(':RTMSyncManager')
 
     kapt rootProject.ext.deps.arouter_kapt
     implementation rootProject.ext.deps.arouter
