[Android]app thinner

--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -18,17 +18,10 @@ android {
 
         if (BEAUTY_RESOURCE != "") {
             exclude 'lib/*/libeffect.so'
-//            exclude 'lib/*/libfuai.so'
-//            exclude 'lib/*/libCNamaSDK.so'
+            exclude 'lib/*/libfuai.so'
+            exclude 'lib/*/libCNamaSDK.so'
         }
     }
-
-//    buildTypes {
-//        release {
-//            minifyEnabled true
-//            shrinkResources true
-//        }
-//    }
 
     lint {
         baseline = file("lint-baseline.xml")
