--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -93,6 +93,7 @@ post_install do |installer|
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
+      config.build_settings['ENABLE_BITCODE'] = 'NO'
       # 为每个配置添加 `-fstack-protector`
 #      config.build_settings['OTHER_CFLAGS'] ||= ['$(inherited)']
 #      config.build_settings['OTHER_CFLAGS'] << '-fstack-protector'
