fix: ci build test

--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -54,7 +54,8 @@ def all_pods
   
   #歌词组件
   pod "ScoreEffectUI", '1.0.2'
-  pod 'AgoraLyricsScore', '1.1.6'
+  pod 'AgoraLyricsScore', :git => 'https://github.com/AgoraIO-Community/LrcView-iOS.git', :branch => 'hotfix_history/1.1.6.1'
+#  pod 'AgoraLyricsScore', '1.1.6'
 #  pod 'AgoraLyricsScore', :git => 'https://github.com/AgoraIO-Community/LrcView-iOS.git', :commit => 'cc0951f11f5fa6113ec2b9df2a509efa881d5bd7'
 #  pod 'AgoraLyricsScore', :path => '../../AgoraLyricsScore/AgoraLyricsScore.podspec'
 
