Dev/all 5.0.0 ios (#1052)
* update logic

* [FIX] restore project old bundle id

* feat: upgrade ktv to rtm syncmanager

* fix: minor changes

* fix:  enter seat indicator view visible fixed

* Dev/all 5.0.0 hezhengqing (#954)

* update logic

* [FIX] restore project old bundle id

---------

Co-authored-by: chenpark <1120627616@qq.com>
Co-authored-by: HeZhengQing <hezhengqing@agora.io>

* Dev/all 5.0.0 ios ktv (#956)

* feat: upgrade ktv to rtm syncmanager

* fix: minor changes

* fix:  enter seat indicator view visible fixed

* fix: minor change

* [FIX] login icon

* fix: minor changes

* fix: update seat format fixed

* fix: filter duplicate keys

* fix: fix compile

* fix: user count display fixed

* fix: switch song bug fixed & update log

* fix: song owner enable switch song when preload music fail

* fix:  add more condition for update play song status

* fix: remove unused code

* fix: cancel preload when switch  song playing

* Dev/all 5.0.0 ios ktv (#961)

* feat: upgrade ktv to rtm syncmanager

* fix: minor changes

* fix:  enter seat indicator view visible fixed

* fix: minor change

* fix: minor changes

* fix: update seat format fixed

* fix: filter duplicate keys

* fix: fix compile

* fix: user count display fixed

* fix: switch song bug fixed & update log

* fix: song owner enable switch song when preload music fail

* fix:  add more condition for update play song status

* fix: remove unused code

* fix: cancel preload when switch  song playing

* fix: upgrade rtm syncmanager (#962)

* fix: ktv error toast fixed

* fix: user count fixed

* fix: user count fixed

* fix: clean seat user info when lock acquired

* [FEAT] auto upload log in scene

* [FEAT] upload log with backend config

* [FIX] remove LSTTimer

* [FEAT] voice room scene upload log

* [FEAT] about app version

* [FEAT] upgrade SDK to version 4.3.1

* [FIX] agora dav1d link flag



--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -54,7 +54,7 @@ def all_pods
   
   #歌词组件
   pod "ScoreEffectUI", '1.0.2'
-  pod 'AgoraLyricsScore', '1.1.6'
+  pod 'AgoraLyricsScore', '1.1.6.1'
 #  pod 'AgoraLyricsScore', :git => 'https://github.com/AgoraIO-Community/LrcView-iOS.git', :commit => 'cc0951f11f5fa6113ec2b9df2a509efa881d5bd7'
 #  pod 'AgoraLyricsScore', :path => '../../AgoraLyricsScore/AgoraLyricsScore.podspec'
 
@@ -93,6 +93,7 @@ post_install do |installer|
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
+      config.build_settings['ENABLE_BITCODE'] = 'NO'
       # 为每个配置添加 `-fstack-protector`
 #      config.build_settings['OTHER_CFLAGS'] ||= ['$(inherited)']
 #      config.build_settings['OTHER_CFLAGS'] << '-fstack-protector'
