[FEAT][AI-Chat] init scene module

--- a/Android/RTMSyncManager/build.gradle
+++ b/Android/RTMSyncManager/build.gradle
@@ -31,6 +31,10 @@ android {
 }
 
 dependencies {
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
     implementation rootProject.ext.deps.gson
     implementation rootProject.ext.deps.annotation
     implementation rootProject.ext.deps.retrofit2
