--- a/Android/common/scenario-api/lib_beautyapi/vendors.gradle
+++ b/Android/common/scenario-api/lib_beautyapi/vendors.gradle
@@ -3,11 +3,14 @@ apply plugin: 'de.undercouch.download'
 task downloadVendorLibs {
     // 商汤美颜库
     def destFile = new File(buildDir, 'vendor_sensetime_9.3.1.zip')
-    download {
-        src 'https://download.agora.io/demo/release/vendor_sensetime_9.3.1.zip'
-        dest destFile
-        overwrite false
+    doFirst{
+        download {
+            src  'https://download.agora.io/demo/release/vendor_sensetime_9.3.1.zip'
+            dest  destFile
+            overwrite  false
+        }
     }
+
     def fileTree = zipTree(destFile)
     def HardwareBuffer = fileTree.getFiles().find {
         it.name.contains("HardwareBuffer")
@@ -36,11 +39,14 @@ task downloadVendorLibs {
 
     // 火山美颜库
     destFile = new File(buildDir, 'vendor_bytedance_4.6.0.zip')
-    download {
-        src 'https://download.agora.io/demo/release/vendor_bytedance_4.6.0.zip'
-        dest destFile
-        overwrite false
+    doFirst {
+        download {
+            src 'https://download.agora.io/demo/release/vendor_bytedance_4.6.0.zip'
+            dest destFile
+            overwrite false
+        }
     }
+
     fileTree = zipTree(destFile)
     def EffectAAR = fileTree.getFiles().find {
         it.name.contains("effectAAR")
