[FEAT][AI-Chat] add a navigation entry point in the create agent dialog

--- a/Android/scenes/aichat/src/main/AndroidManifest.xml
+++ b/Android/scenes/aichat/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <application>
         <activity
-            android:name=".create.AIChatListActivity"
+            android:name=".list.AIChatListActivity"
             android:exported="false"
             android:launchMode="singleTask"
             android:theme="@style/aichat_MaterialComponentsTheme"
