Dev/ipa size (#1057)
* feat: Remove the fu beauty resource pack

* feat: add FURender podspec

* feat: remove unused config in podspec

* feat: modify photo picker pod file

* feat: use system photo picker

* feat: set preview alpha value

* fix: modify FURender podspec

* fix: fix build error

* fix: Modify fu.podspec FURender.podspec

* fix: remove unused code

* fix:minor changes

---------

Co-authored-by: qinhui <>
Co-authored-by: wushengtao <tamworth@163.com>

--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -31,7 +31,11 @@ def all_pods
   # 商汤美颜
   pod 'SenseLib', :path => 'sense.podspec'
   # 相芯美颜
-  pod 'fuLib', :path => 'fu.podspec'
+#  pod 'fuLib', :path => 'fu.podspec'
+  
+  #相芯美颜(资源动态下发)
+#  pod 'FURenderKit', :path => 'FURenderKit.podspec'
+
 
   pod 'AgoraSyncManager', '~> 2.1.6'
 #  pod 'AgoraRtcEngine_Special_iOS', :path => 'AgoraRtcEngine_iOS.podspec'
@@ -75,12 +79,12 @@ def all_pods
   pod 'SwiftyBeaver', '1.9.5'
   pod 'Protobuf', '3.22.1'
   pod 'SwiftProtobuf'
- #  pod 'LookinServer', :subspecs => ['Swift'], :configurations => ['Debug']
+#  pod 'LookinServer', :subspecs => ['Swift'], :configurations => ['Debug']
 
   #bugly
   pod 'Bugly','2.6.1'
   
-  pod 'HXPhotoPicker/Lite', '4.1.7'
+  #pod 'HXPhotoPicker/Picker/Lite'
 end
 
 target 'AgoraEntScenarios' do
