--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -42,6 +42,7 @@ def all_pods
   pod 'AudioScenarioApi', :path => 'AgoraEntScenarios/Common/API/AudioScenarioApi'
   pod 'RTMSyncManager', :path => 'AgoraEntScenarios/Common/API/RTMSyncManager'
   pod 'AGResourceManager', :path => 'AgoraEntScenarios/Common/API/AGResourceManager'
+  pod 'AIChat', :path => 'AgoraEntScenarios/Common/API/AIChat'
   pod 'CallAPI', :path => 'AgoraEntScenarios/Common/API/CallAPI'
   pod 'VideoLoaderAPI', :path => 'AgoraEntScenarios/Common/API/VideoLoaderAPI'
   pod 'Pure1v1', :path => 'AgoraEntScenarios/Scenes/Pure1v1'
@@ -71,7 +72,7 @@ def all_pods
   pod 'SnapKit'
   pod 'SVGAPlayer'
   pod 'KakaJSON'
-  pod 'Agora_Chat_iOS', '1.0.8'
+  pod 'Agora_Chat_iOS', '1.2.0'
   pod 'SwiftyBeaver', '1.9.5'
   pod 'Protobuf', '3.22.1'
   pod 'SwiftProtobuf'
