--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -95,6 +95,7 @@ post_install do |installer|
     target.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
       config.build_settings['ENABLE_BITCODE'] = 'NO'
+      config.build_settings["DEVELOPMENT_TEAM"] = '3Y5B6D2XFS'
       # 为每个配置添加 `-fstack-protector`
 #      config.build_settings['OTHER_CFLAGS'] ||= ['$(inherited)']
 #      config.build_settings['OTHER_CFLAGS'] << '-fstack-protector'
