--- a/Android/settings.gradle
+++ b/Android/settings.gradle
@@ -39,25 +39,25 @@ include ':common:scenario-api:lib_beautyapi:aars:beauty_bytedance:EffectAAR'
 
 include ':RTMSyncManager'
 
-/*
- * 在线K歌房
- */
-include ':scenes:ktv'
-
-/*
- * 嗨歌抢唱
- */
-include ':scenes:ktv_singbattle'
-
-/*
- * 抢麦接唱
- */
-include ':scenes:ktv_relay'
-
-/**
- * 大合唱
- */
-include ':scenes:cantata'
+///*
+// * 在线K歌房
+// */
+//include ':scenes:ktv'
+//
+///*
+// * 嗨歌抢唱
+// */
+//include ':scenes:ktv_singbattle'
+//
+///*
+// * 抢麦接唱
+// */
+//include ':scenes:ktv_relay'
+//
+///**
+// * 大合唱
+// */
+//include ':scenes:cantata'
 
 /*
  * 语聊房
