--- a/Android/scenes/aichat/src/main/AndroidManifest.xml
+++ b/Android/scenes/aichat/src/main/AndroidManifest.xml
@@ -10,5 +10,11 @@
             android:launchMode="singleTask"
             android:theme="@style/aichat_MaterialComponentsTheme"
             android:windowSoftInputMode="adjustPan" />
+
+        <activity
+            android:name=".chat.AiChatActivity"
+            android:exported="false"
+            android:theme="@style/aichat_MaterialComponentsTheme"
+            android:windowSoftInputMode="stateHidden|adjustResize" />
     </application>
 </manifest>
