Dev/aichat 5.11.0 wu (#1072)
* Dev/ipa size (#1057)

* feat: Remove the fu beauty resource pack

* feat: add FURender podspec

* feat: remove unused config in podspec

* feat: modify photo picker pod file

* feat: use system photo picker

* feat: set preview alpha value

* fix: modify FURender podspec

* fix: fix build error

* fix: Modify fu.podspec FURender.podspec

* fix: remove unused code

* fix:minor changes

---------

Co-authored-by: qinhui <>
Co-authored-by: wushengtao <tamworth@163.com>

* Dev/all 5.0.0 ios (#1062)

* update logic

* [FIX] restore project old bundle id

* feat: upgrade ktv to rtm syncmanager

* fix: minor changes

* fix:  enter seat indicator view visible fixed

* Dev/all 5.0.0 hezhengqing (#954)

* update logic

* [FIX] restore project old bundle id

---------

Co-authored-by: chenpark <1120627616@qq.com>
Co-authored-by: HeZhengQing <hezhengqing@agora.io>

* Dev/all 5.0.0 ios ktv (#956)

* feat: upgrade ktv to rtm syncmanager

* fix: minor changes

* fix:  enter seat indicator view visible fixed

* fix: minor change

* [FIX] login icon

* fix: minor changes

* fix: update seat format fixed

* fix: filter duplicate keys

* fix: fix compile

* fix: user count display fixed

* fix: switch song bug fixed & update log

* fix: song owner enable switch song when preload music fail

* fix:  add more condition for update play song status

* fix: remove unused code

* fix: cancel preload when switch  song playing

* Dev/all 5.0.0 ios ktv (#961)

* feat: upgrade ktv to rtm syncmanager

* fix: minor changes

* fix:  enter seat indicator view visible fixed

* fix: minor change

* fix: minor changes

* fix: update seat format fixed

* fix: filter duplicate keys

* fix: fix compile

* fix: user count display fixed

* fix: switch song bug fixed & update log

* fix: song owner enable switch song when preload music fail

* fix:  add more condition fo

--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -32,6 +32,10 @@ def all_pods
   pod 'SenseLib', :path => 'sense.podspec'
   # 相芯美颜
   pod 'fuLib', :path => 'fu.podspec'
+  
+  #相芯美颜(资源动态下发)
+  pod 'FURenderKit', :path => 'FURenderKit.podspec'
+
 
   pod 'AgoraSyncManager', '~> 2.1.6'
 #  pod 'AgoraRtcEngine_Special_iOS', :path => 'AgoraRtcEngine_iOS.podspec'
@@ -61,7 +65,7 @@ def all_pods
 
   pod 'Zip'
   pod 'MJRefresh'
-  
+
   
   # Swift Code Formatter
 #  pod 'SwiftFormat/CLI'
@@ -76,12 +80,12 @@ def all_pods
   pod 'SwiftyBeaver', '1.9.5'
   pod 'Protobuf', '3.22.1'
   pod 'SwiftProtobuf'
- #  pod 'LookinServer', :subspecs => ['Swift'], :configurations => ['Debug']
+#  pod 'LookinServer', :subspecs => ['Swift'], :configurations => ['Debug']
 
   #bugly
   pod 'Bugly','2.6.1'
   
-  pod 'HXPhotoPicker/Lite', '4.1.7'
+  #pod 'HXPhotoPicker/Picker/Lite'
 end
 
 target 'AgoraEntScenarios' do
