--- a/Android/scenes/aichat/src/main/AndroidManifest.xml
+++ b/Android/scenes/aichat/src/main/AndroidManifest.xml
@@ -5,10 +5,17 @@
 
     <application>
         <activity
+            android:name=".create.AiChatRoomCreateActivity"
+            android:exported="false"
+            android:launchMode="singleTop"
+            android:theme="@style/aichat_MaterialComponentsTheme"
+            android:windowSoftInputMode="adjustPan"/>
+        <activity
             android:name=".list.AIChatListActivity"
             android:exported="false"
             android:launchMode="singleTask"
             android:theme="@style/aichat_MaterialComponentsTheme"
             android:windowSoftInputMode="adjustPan" />
     </application>
+
 </manifest>
