--- a/Android/gradle.properties
+++ b/Android/gradle.properties
@@ -16,6 +16,7 @@ SERVER_HOST=https://gateway-fulldemo.shengwang.cn/
 TOOLBOX_SERVER_HOST=https://service.shengwang.cn/toolbox
 TOOLBOX_SERVER_HOST_DEV=https://service-staging.agora.io/toolbox
 ROOM_MANAGER_SERVER_HOST=https://service.shengwang.cn/room-manager
+AI_CHAT_SERVER_HOST=https://ai-chat-service-staging.sh3t.agoralab.co
 
 #----------- Resource --------------
 BEAUTY_RESOURCE=
