Feat/scene/aichat 5.11.0 (#1085)
* [Android]update version to 2.0.0

* fix exit room bug

* [Common][Android]add EntLogger.

* [KTV][Android]update Logger.

* [Voice][Android]update Logger.

* feat: migration to syncmanager v2

* update syncManager version to 2.2.0

* feat: add log config

* fix: migration to syncmanager v2

* fix: compile error

* fix: photo authorization

* fix: main thread checker

* fix bugs in chours

* fix: sync player status  fixed

* fix: reset ktv api status if co singer leave seat

* fix ltc display bugs

* fix: singer leave seat incorrect

* coSinger control musicTrackMode itself

* fix: sync player status

* fix: setting view cache data

* fix: origin/acc status fixed

* sync mediaPlayerState

* change default audioTrack to aac

* fix: ignore invalid cmd

* fix: song title visible incorrect

* fix: lrc reset & stop

* fix: cache sound sound effect View

* feat: add log

* fix leave chrous bug

* fix: remove "creator" param

* fix: score view visible problem while owner reopen the room

* fix: chorus aec fixed

* fix: export caches logs

* fix:  optimize chorus aec

* fix: ntp sync

* fix: ntp sync

* fix: adjust co-singer volume

* fix: adjust remote user volume

* fix: adjust remote volume in setting menu

* adjust remote volume

* fix:  optimize ktvapi

* fix: minor changes

* fix: rejoin chanel ex

* fix: modify song list result count

* fix: update log

* fix: remove debug toast

* fix: mcc song result count fixed

* fix: co singer visible acc/orig & setting button

* adjust ktv logic

* update SyncManager

* fix: sync music test

* fix: sync button status of choose song list

* fix: crash

* fix: minor changes

* unmute mic for roomOwner

* disable mpk seek in chrous

* update native sdk

* fix anr

* fix: remove unused code

* fix: play stats fixed

* fix: remove 'enableLocalAudio' & 'muteLocalAudioStream'

* fi

--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -80,12 +80,14 @@ def all_pods
   pod 'SwiftyBeaver', '1.9.5'
   pod 'Protobuf', '3.22.1'
   pod 'SwiftProtobuf'
+
 #  pod 'LookinServer', :subspecs => ['Swift'], :configurations => ['Debug']
 
   #bugly
   pod 'Bugly','2.6.1'
   
-  #pod 'HXPhotoPicker/Picker/Lite'
+  pod 'HXPhotoPicker/Lite', '4.1.7'
+
 end
 
 target 'AgoraEntScenarios' do
