feat: fix audio convert issues, add rtc service

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 **/android/.gradle
-.DS_Store
+*.DS_Store
 local.properties
 .idea
 **/AgoraLyricsScore/*
@@ -21,3 +21,5 @@ Pods
 *.lock
 iOS/Podfile.lock
 *.lock
+*.zip
+*.framework
