--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -40,6 +40,7 @@ def all_pods
   pod 'AgoraSyncManager', '~> 2.1.6'
 #  pod 'AgoraRtcEngine_Special_iOS', :path => 'AgoraRtcEngine_iOS.podspec'
   pod 'AgoraRtcEngine_Special_iOS', '4.3.2.2'
+  pod 'AgoraHy', :path => 'AgoraHy.podspec'
 #  pod 'AgoraRtm', '2.2.1'
   pod 'AgoraRtm', :path => 'AgoraRtm.podspec'
 
@@ -81,7 +82,7 @@ def all_pods
   pod 'Protobuf', '3.22.1'
   pod 'SwiftProtobuf'
 
-#  pod 'LookinServer', :subspecs => ['Swift'], :configurations => ['Debug']
+  #pod 'LookinServer', :subspecs => ['Swift'], :configurations => ['Debug']
 
   #bugly
   pod 'Bugly','2.6.1'
