--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -40,7 +40,7 @@ def all_pods
   pod 'AgoraSyncManager', '~> 2.1.6'
 #  pod 'AgoraRtcEngine_Special_iOS', :path => 'AgoraRtcEngine_iOS.podspec'
   pod 'AgoraRtcEngine_Special_iOS', '4.3.2.2'
-  #pod 'AgoraHy', :path => 'AgoraHy.podspec'
+  pod 'AgoraHy', :path => 'AgoraHy.podspec'
 #  pod 'AgoraRtm', '2.2.1'
   pod 'AgoraRtm', :path => 'AgoraRtm.podspec'
 
