--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -38,7 +38,7 @@ def all_pods
   # 相芯美颜
  # pod 'fuLib', :path => 'fu.podspec'
 
-  pod 'AgoraSyncManager', '~> 2.1.6'
+  pod 'AgoraSyncManager', '2.1.7'
 
 #  pod 'AgoraRtcEngine_Special_iOS', :path => 'AgoraRtcEngine_iOS.podspec'
 #  pod 'AgoraRtcEngine_iOS', '~> 4.1.1'
