--- a/Android/gradle.properties
+++ b/Android/gradle.properties
@@ -10,8 +10,8 @@ APP_VERSION_CODE=5
 APP_VERSION_NAME=4.10.2
 
 #----------- Server Host Config --------------
-SERVER_HOST=https://gateway-fulldemo.shengwang.cn/
-TOOLBOX_SERVER_HOST=https://service.shengwang.cn/toolbox
+SERVER_HOST=https://gateway-fulldemo.apprtc.cn/
+TOOLBOX_SERVER_HOST=https://service.apprtc.cn/toolbox
 TOOLBOX_SERVER_HOST_DEV=https://service-staging.agora.io/toolbox
 #----------- Config Agora Keys -----------
 # RTM RTC SDK key Config
