--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -48,13 +48,13 @@ def all_pods
   pod 'RTMSyncManager', :path => 'AgoraEntScenarios/Common/API/RTMSyncManager'
   pod 'AGResourceManager', :path => 'AgoraEntScenarios/Common/API/AGResourceManager'
   pod 'AIChat', :path => 'AgoraEntScenarios/Common/API/AIChat'
-  pod 'CallAPI', :path => 'AgoraEntScenarios/Common/API/CallAPI'
+#  pod 'CallAPI', :path => 'AgoraEntScenarios/Common/API/CallAPI'
   pod 'VideoLoaderAPI', :path => 'AgoraEntScenarios/Common/API/VideoLoaderAPI'
-  pod 'Pure1v1', :path => 'AgoraEntScenarios/Scenes/Pure1v1'
-  pod 'ShowTo1v1', :path => 'AgoraEntScenarios/Scenes/ShowTo1v1'
-  pod 'Cantata', :path => 'AgoraEntScenarios/Scenes/Cantata'
+#  pod 'Pure1v1', :path => 'AgoraEntScenarios/Scenes/Pure1v1'
+#  pod 'ShowTo1v1', :path => 'AgoraEntScenarios/Scenes/ShowTo1v1'
+#  pod 'Cantata', :path => 'AgoraEntScenarios/Scenes/Cantata'
   pod 'AgoraCommon', :path => 'AgoraEntScenarios'
-  pod 'Joy', :path => 'AgoraEntScenarios/Scenes/Joy'
+#  pod 'Joy', :path => 'AgoraEntScenarios/Scenes/Joy'
   pod 'SocketRocket', '0.7.0'
   pod 'Agora-Scene-Utils', '1.1.0'
   
