--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -44,10 +44,10 @@ def all_pods
 #  pod 'AgoraRtcEngine_iOS', '~> 4.1.1'
   pod 'AgoraRtcEngine_Special_iOS', '4.1.1.29'
   pod 'SwiftProtobuf'
-  pod 'CallAPI', :path => 'AgoraEntScenarios/Common/API/CallAPI'
+#  pod 'CallAPI', :path => 'AgoraEntScenarios/Common/API/CallAPI'
   pod 'VideoLoaderAPI', :path => 'AgoraEntScenarios/Common/API/VideoLoaderAPI'
-  pod 'Pure1v1', :path => 'AgoraEntScenarios/Scenes/Pure1v1'
-  pod 'ShowTo1v1', :path => 'AgoraEntScenarios/Scenes/ShowTo1v1'
+#  pod 'Pure1v1', :path => 'AgoraEntScenarios/Scenes/Pure1v1'
+#  pod 'ShowTo1v1', :path => 'AgoraEntScenarios/Scenes/ShowTo1v1'
 #  pod 'Cantata', :path => 'AgoraEntScenarios/Scenes/Cantata'
   pod 'AgoraCommon', :path => 'AgoraEntScenarios'
   #ThirdParty
