[Android]update domain

--- a/Android/gradle.properties
+++ b/Android/gradle.properties
@@ -12,10 +12,10 @@ APP_VERSION_NAME=5.0.0
 USE_LOCAL_SDK=false
 
 #----------- Server Host Config --------------
-SERVER_HOST=https://gateway-fulldemo.shengwang.cn/
-TOOLBOX_SERVER_HOST=https://service.shengwang.cn/toolbox
+SERVER_HOST=https://gateway-fulldemo.apprtc.cn/
+TOOLBOX_SERVER_HOST=https://service.apprtc.cn/toolbox
 TOOLBOX_SERVER_HOST_DEV=https://service-staging.agora.io/toolbox
-ROOM_MANAGER_SERVER_HOST=https://service.shengwang.cn/room-manager
+ROOM_MANAGER_SERVER_HOST=https://service.apprtc.cn/room-manager
 
 #----------- Resource --------------
 BEAUTY_RESOURCE=
