--- a/Android/settings.gradle
+++ b/Android/settings.gradle
@@ -37,6 +37,9 @@ include ':common:scenario-api:lib_beautyapi:aars:beauty_sensetime:STMobileJNI'
 include ':common:scenario-api:lib_beautyapi:aars:beauty_sensetime:HardwareBuffer'
 include ':common:scenario-api:lib_beautyapi:aars:beauty_bytedance:EffectAAR'
 
+include ':common:scenario-api:lib_hyextension'
+include ':common:scenario-api:lib_hyextension:aars:AgoraHy'
+
 include ':RTMSyncManager'
 
 /*
