--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -37,7 +37,7 @@ def all_pods
   pod 'FURenderKit', :path => 'FURenderKit.podspec'
 
 
-  pod 'AgoraSyncManager', '~> 2.1.6'
+  pod 'AgoraSyncManager', '2.1.6'
 #  pod 'AgoraRtcEngine_Special_iOS', :path => 'AgoraRtcEngine_iOS.podspec'
   pod 'AgoraRtcEngine_Special_iOS', '4.3.2.2'
   pod 'AgoraHy', :path => 'AgoraHy.podspec'
