[Feat][Ai-Chat] update recording ui && add greeting message

--- a/Android/scenes/aichat/src/main/AndroidManifest.xml
+++ b/Android/scenes/aichat/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
             android:name=".chat.AiChatActivity"
             android:exported="false"
             android:theme="@style/aichat_MaterialComponentsTheme"
-            android:windowSoftInputMode="stateHidden|adjustResize" />
+            android:windowSoftInputMode="adjustResize" />
 
         <activity
             android:name=".create.AiChatAgentCreateActivity"
