--- a/Android/scenes/aichat/src/main/AndroidManifest.xml
+++ b/Android/scenes/aichat/src/main/AndroidManifest.xml
@@ -23,6 +23,12 @@
             android:theme="@style/aichat_MaterialComponentsTheme"
             android:windowSoftInputMode="adjustPan"/>
         <activity
+            android:name=".groupmanager.AiChatGroupManagerActivity"
+            android:exported="false"
+            android:launchMode="singleTop"
+            android:theme="@style/aichat_MaterialComponentsTheme"
+            android:windowSoftInputMode="adjustPan"/>
+        <activity
             android:name=".list.AIChatListActivity"
             android:exported="false"
             android:launchMode="singleTask"
