--- a/Android/scenes/aichat/src/main/AndroidManifest.xml
+++ b/Android/scenes/aichat/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         <activity
             android:name=".chat.AiChatActivity"
             android:exported="false"
+            android:launchMode="singleTop"
             android:theme="@style/aichat_MaterialComponentsTheme"
             android:windowSoftInputMode="adjustResize" />
 
@@ -15,19 +16,19 @@
             android:exported="false"
             android:launchMode="singleTop"
             android:theme="@style/aichat_MaterialComponentsTheme"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".create.AiChatGroupCreateActivity"
             android:exported="false"
             android:launchMode="singleTop"
             android:theme="@style/aichat_MaterialComponentsTheme"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".groupmanager.AiChatGroupManagerActivity"
             android:exported="false"
             android:launchMode="singleTop"
             android:theme="@style/aichat_MaterialComponentsTheme"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".list.AIChatListActivity"
             android:exported="false"
