--- a/Android/config.gradle
+++ b/Android/config.gradle
@@ -50,7 +50,9 @@ ext {
             gson              : 'com.google.code.gson:gson:2.9.0',
             autosize          : 'com.github.JessYanCoding:AndroidAutoSize:v1.2.1',
 
-            rtc               : 'io.agora.rtc:agora-special-full:4.3.2.4',
+//            rtc               : 'io.agora.rtc:agora-special-full:4.3.2.4',
+            rtc               : 'io.agora.rtc:agora-special-full:4.1.1.29',
+
             rtm               : 'io.agora:agora-rtm:2.2.1',
             syncManager       : 'com.github.AgoraIO-Community:SyncManager-Android:2.2.11',
             lyricsView        : 'com.github.AgoraIO-Community:LyricsView:1.1.4',
