--- a/Android/scenes/aichat/src/main/AndroidManifest.xml
+++ b/Android/scenes/aichat/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
             android:name=".chat.AiChatActivity"
             android:exported="false"
             android:launchMode="singleTop"
+            android:screenOrientation="portrait"
             android:theme="@style/aichat_MaterialComponentsTheme"
             android:windowSoftInputMode="adjustResize" />
 
@@ -15,24 +16,28 @@
             android:name=".create.AiChatAgentCreateActivity"
             android:exported="false"
             android:launchMode="singleTop"
+            android:screenOrientation="portrait"
             android:theme="@style/aichat_MaterialComponentsTheme"
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".create.AiChatGroupCreateActivity"
             android:exported="false"
             android:launchMode="singleTop"
+            android:screenOrientation="portrait"
             android:theme="@style/aichat_MaterialComponentsTheme"
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".groupmanager.AiChatGroupManagerActivity"
             android:exported="false"
             android:launchMode="singleTop"
+            android:screenOrientation="portrait"
             android:theme="@style/aichat_MaterialComponentsTheme"
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".list.AIChatListActivity"
             android:exported="false"
             android:launchMode="singleTask"
+            android:screenOrientation="portrait"
             android:theme="@style/aichat_MaterialComponentsTheme"
             android:windowSoftInputMode="adjustPan" />
     </application>
