--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
     <!-- android 13 细化权限   -->
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 
+    <!-- 震动-->
+    <uses-permission android:name="android.permission.VIBRATE" />
+
     <!--适配Android R包可见性 开始-->
     <queries package="${applicationId}">
         <intent>
