--- a/Android/common/base/build.gradle
+++ b/Android/common/base/build.gradle
@@ -40,6 +40,7 @@ android {
         buildConfigField "String", "ROOM_MANAGER_SERVER_HOST", "\"${ROOM_MANAGER_SERVER_HOST}\""
         buildConfigField "String", "TOOLBOX_SERVER_HOST_DEV", "\"${TOOLBOX_SERVER_HOST_DEV}\""
         buildConfigField "String", "AI_CHAT_SERVER_HOST", "\"${AI_CHAT_SERVER_HOST}\""
+        buildConfigField "String", "AI_CHAT_SERVER_HOST_DEV", "\"${AI_CHAT_SERVER_HOST_DEV}\""
 
         buildConfigField "String", "AGORA_APP_ID", "\"${AGORA_APP_ID}\""
         buildConfigField "String", "AGORA_APP_CERTIFICATE", "\"${AGORA_APP_CERTIFICATE}\""
