--- a/Android/scenes/aichat/src/main/AndroidManifest.xml
+++ b/Android/scenes/aichat/src/main/AndroidManifest.xml
@@ -14,6 +14,14 @@
             android:windowSoftInputMode="adjustResize" />
 
         <activity
+            android:name=".chat.AiVoiceCallActivity"
+            android:exported="false"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:theme="@style/aichat_MaterialComponentsTheme"
+            android:windowSoftInputMode="adjustResize" />
+
+        <activity
             android:name=".create.AiChatAgentCreateActivity"
             android:exported="false"
             android:launchMode="singleTop"
