[Feat]meger rtt to 5.x

--- a/Android/gradle.properties
+++ b/Android/gradle.properties
@@ -16,6 +16,8 @@ SERVER_HOST=https://gateway-fulldemo.apprtc.cn/
 TOOLBOX_SERVER_HOST=https://service.apprtc.cn/toolbox
 TOOLBOX_SERVER_HOST_DEV=https://service-staging.agora.io/toolbox
 ROOM_MANAGER_SERVER_HOST=https://service.apprtc.cn/room-manager
+AI_CHAT_SERVER_HOST_DEV=https://ai-chat-service-staging.sh3t.agoralab.co
+AI_CHAT_SERVER_HOST=https://ai-chat-service.apprtc.cn
 
 #----------- Resource --------------
 BEAUTY_RESOURCE=
